# ESP32-Quaternion-Drone

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.cpp
main/mylib/esc/: esc.hpp  pwm_esc.cpp  pwm_esc.hpp
main/mylib/filter/: filter.hpp  simple_filter.cpp  simple_filter.hpp
main/mylib/imu_fusion/: imu_fusion.hpp  simple_imu_fusion.cpp  simple_imu_fusion.hpp
main/mylib/math/: math.hpp  matrix.hpp  quaternion.hpp  vector3.hpp
main/mylib/mpu9250/: mpu9250.cpp  mpu9250.hpp
main/mylib/receiver/: receiver.cpp  receiver.hpp
main/mylib/utility/: utility.cpp  utility.hpp
monitoring/: cli_monitor.py  gui_monitor.py  log_reader.py
